--- a/.github/workflows/workflows-gh-manager.yaml
+++ b/.github/workflows/workflows-gh-manager.yaml
@@ -3,6 +3,8 @@ name: Workflow issue manager
 on:
   issues:
     types: [opened, edited, closed, reopened, assigned, unassigned]
+  issue_comment:
+    types: [created, edited, deleted]
 
 jobs:
   issue_handler:
