--- a/.github/workflows/workflows-gh-manager.yaml
+++ b/.github/workflows/workflows-gh-manager.yaml
@@ -42,6 +42,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: "1.5.0"
+          cli_config_credentials_token: ${{ secrets.TF_TOKEN_app_terraform_io }};
 
       # Terraform login
       - name: Terraform login (HCP via token)
